# device-viewer

./: .gitignore  io.github.ydalton.DeviceViewer.json  meson.build
src/: application-window.vala  dm.gresources.xml  main.vala  meson.build  window.blp  window.vala
src/model/: drm.vala  meson.build
src/pages/: meson.build
src/pages/drm/: device.vala  drm.blp  drm.vala
src/pages/monitors/: monitors.blp  monitors.vala
src/ui/: window.blp
src/view/: meson.build
src/view/drm/: device.blp  drm.blp  drm.vala
src/view/monitors/: monitors.blp  monitors.vala
